--- a/app/views/home/hor.html.erb
+++ b/app/views/home/hor.html.erb
@@ -36,7 +36,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="dropdown active">
-                    <li><a href="/about_us" target="_blank">ABOUT</a></li>
+                    <li><a href="/about_us">About</a></li>
                     <li><a href="/recruitment_process_outsourcing">Recruitment Process Outsourcing</a></li>
 					<li  class="active"><a href="/hire_offshore_recruiters">Hire Offshore Recruiters</a></li>
 					<li><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India	</a></li>
@@ -46,7 +46,49 @@
             <!-- BEGIN TOP NAVIGATION MENU -->
 		</div>
     </div>
+<div class="page-container">
+	
+        <!-- BEGIN BREADCRUMBS -->   
+        <div class="row breadcrumbs">
+            <div class="container">
+                <div class="col-md-4 col-sm-4">
+                    <h1>HIRE OFFSHORE RECRUITERS</h1>
+                </div>
+                <div class="col-md-8 col-sm-8">
+                    <ul class="pull-right breadcrumb">
+                        <li><a href="<%= root_path %>">Home</a></li>
+                        <li class="active">Hire Offshore Recruiters</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container min-hight">
+        <div class="row">
+				<div class="col-md-12 col-sm-12">
+					<div class="space20"></div>
+					<p>We have experienced and highly skilled recruiters available for $999 per month. Our recruiters are dedicated and will exclusively perform full life cycle recruitment for your needs i.e. sourcing resumes, calling, interview arrangements, reference checks and closing offers. Our recruiters are experienced in hiring contract, contract to hire and full time employees on 1099, Corp-Corp, W2 and Per-diem based.</p>
+					<div class="space10"></div>
+					
+					<ul class="list-unstyled">
+						<li><i class="fa fa-check"></i> Analyzing and understanding requirements</li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Sourcing resumes  </li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Candidate screening & assessment </li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Negotiating salary </li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Interview co-ordination </li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Reference checks </li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Extending the offer </li>
+					</ul>      
+				</div>
 
+			</div>
+</div>
+</div>
     <!-- BEGIN COPYRIGHT -->
     <div class="copyright">
         <div class="container">
