--- a/app/views/home/rpo.html.erb
+++ b/app/views/home/rpo.html.erb
@@ -36,7 +36,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="dropdown active">
-                    <li><a href="/about_us" target="_blank">ABOUT</a></li>
+                    <li><a href="/about_us">About</a></li>
                     <li class="active"><a href="/recruitment_process_outsourcing">Recruitment Process Outsourcing</a></li>
 					<li><a href="/hire_offshore_recruiters">Hire Offshore Recruiters</a></li>
 					<li><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India	</a></li>
@@ -46,7 +46,45 @@
             <!-- BEGIN TOP NAVIGATION MENU -->
 		</div>
     </div>
+<div class="page-container">
+	
+        <!-- BEGIN BREADCRUMBS -->   
+        <div class="row breadcrumbs">
+            <div class="container">
+                <div class="col-md-5 col-sm-5">
+                    <h1>RECRUITMENT PROCESS OUTSOURCING</h1>
+                </div>
+                <div class="col-md-7 col-sm-7">
+                    <ul class="pull-right breadcrumb">
+                        <li><a href="<%= root_path %>">Home</a></li>
+                        <li class="active">Recruitment Process Outsourcing</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container min-hight">
+			<div class="row">
+				<div class="col-md-12 col-sm-12">
+					<div class="space20"></div>
+					<p>We manage the entire hiring process from job profiling through the on boarding of the new hire, including staff, technology, strategies and reporting.</p>
+					<div class="space20"></div>
+					<ul class="list-unstyled">
+						<li><i class="fa fa-check"></i> Our highly skilled experienced Recruiters are experts in finding the suitable candidates for your requirements within the specified time frame and budget you deem as necessary.</li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Along with using regular job sites to find active candidates we also use innovative skills to attract best Passive Talent through Google Boolean search and Networking (LinkedIn). </li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Help businesses grow by matching the right talent to their specialized staffing and consulting needs, and build rewarding careers for the professionals we place. </li>
+						<div class="space20"></div>
+						<li><i class="fa fa-check"></i> Create a work environment where employees can thrive and innovate </li>
+						<div class="space20"></div>
+					</ul> 
+					<div class="space10"></div>
+					<p>We understand that every business is unique, and that paying careful attention to the specific needs of every client, from multi-national corporate clients to entry-level programmers, is the only way to ensure success for everyone involved.</p>
+				</div>
 
+			</div>
+</div>
+</div>
     <!-- BEGIN COPYRIGHT -->
     <div class="copyright">
         <div class="container">
