--- a/app/views/home/sti.html.erb
+++ b/app/views/home/sti.html.erb
@@ -36,17 +36,48 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="dropdown active">
-                    <li><a href="/about_us" target="_blank">ABOUT</a></li>
+                    <li><a href="/about_us">About</a></li>
                     <li><a href="/recruitment_process_outsourcing">Recruitment Process Outsourcing</a></li>
 					<li><a href="/hire_offshore_recruiters">Hire Offshore Recruiters</a></li>
-					<li class="active"><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India	</a></li>
+					<li class="active"><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India</a></li>
 					<li><a href="/contact_us">Contact Us</a></li>
                 </ul>                         
             </div>
             <!-- BEGIN TOP NAVIGATION MENU -->
 		</div>
     </div>
+<div class="page-container">
+	
+        <!-- BEGIN BREADCRUMBS -->   
+        <div class="row breadcrumbs">
+            <div class="container">
+                <div class="col-md-5 col-sm-5">
+                    <h1>SET UP YOUR OFFSHORE OFFICE IN INDIA</h1>
+                </div>
+                <div class="col-md-7 col-sm-7">
+                    <ul class="pull-right breadcrumb">
+                        <li><a href="<%= root_path %>">Home</a></li>
+                        <li class="active">Setup Your Offshore Office in India</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
+        <div class="container min-hight">
+			<div class="row">
+				<div class="col-md-12 col-sm-12">
+					<div class="space20"></div>
+					<p><b>Set up your offshore office in India and hire recruiters for only $799 per month ($5/hr). We can help you to do this by managing entire process.</b></p>
+					<div class="space5"></div>
+					<!-- BEGIN FORM-->
+					<p>You can set up your offshore office in India. You can hire full time recruiters for $500-$1,000 per month. We can help you in every aspect from registering your company, infrastructure, hiring recruiters, managing employees and office administration.</p>
+					<!-- END FORM-->                  
+					<div class="space"></div>
+					<p>By providing reduced labor costs, we allow your company to get more from its Recruiting Budget.  For about the same amount of money as you might pay for 2-3 job postings per month, we will provide you with a Full Time, Full Cycle Recruiter, providing a comprehensive candidates search of numerous paid resources, then screening, qualifying, and presenting the best qualified candidates for your openings, and managing the entire interview process on your behalf.</p>
+				</div>
 
+			</div>
+</div>
     <!-- BEGIN COPYRIGHT -->
     <div class="copyright">
         <div class="container">
