--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -36,7 +36,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="dropdown active">
-                    <li class="active"><a href="/about_us" target="_blank">ABOUT</a></li>
+                    <li class="active"><a href="/about_us">About</a></li>
                     <li><a href="/recruitment_process_outsourcing">Recruitment Process Outsourcing</a></li>
 					<li><a href="/hire_offshore_recruiters">Hire Offshore Recruiters</a></li>
 					<li><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India	</a></li>
@@ -46,7 +46,38 @@
             <!-- BEGIN TOP NAVIGATION MENU -->
 		</div>
     </div>
+ <div class="page-container">
+	
+        <!-- BEGIN BREADCRUMBS -->   
+        <div class="row breadcrumbs">
+            <div class="container">
+                <div class="col-md-4 col-sm-4">
+                    <h1>ABOUT US</h1>
+                </div>
+                <div class="col-md-8 col-sm-8">
+                    <ul class="pull-right breadcrumb">
+                        <li><a href="<%= root_path %>">Home</a></li>
+                        <li class="active">About Us</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container min-hight">
+			<div class="row">
+				<div class="col-md-12 col-sm-12">
+					<div class="space20"></div>
+					<p>Maania Consultancy is a professional Recruitment Process Outsourcing (RPO) Company specialized in Talent Acquisition in the areas of IT, Engineering, Healthcare and Financial services.</p>
+					<div class="space5"></div>
+					<!-- BEGIN FORM-->
+					<p>Our aim is to cut organizations recruiting costs. We can deliver offshore recruiters and we will help you to setup your offshore office in India and manage entire process. We help companies cast a larger net to locate more of the talent they need by increasing their recruiting capacity.</p>
+					<!-- END FORM-->                  
+					<div class="space"></div>
+					<p>We inspire individuals and organizations to work more effectively, efficiently, and foster greater choice in the domain of labor for the benefit of all concerned. Helping people to better perform enhances better quality of life; this is the staple as our company’s common purpose; the way in which we contribute to society.</p>
+				</div>
 
+			</div>
+</div>
+</div>
     <!-- BEGIN COPYRIGHT -->
     <div class="copyright">
         <div class="container">
