--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -36,7 +36,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="dropdown active">
-                    <li><a href="/about_us" target="_blank">ABOUT</a></li>
+                    <li><a href="/about_us">About</a></li>
                     <li><a href="/recruitment_process_outsourcing">Recruitment Process Outsourcing</a></li>
 					<li><a href="/hire_offshore_recruiters">Hire Offshore Recruiters</a></li>
 					<li><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India	</a></li>
@@ -46,7 +46,35 @@
             <!-- BEGIN TOP NAVIGATION MENU -->
 		</div>
     </div>
+<div class="page-container">
+	
+        <!-- BEGIN BREADCRUMBS -->   
+        <div class="row breadcrumbs">
+            <div class="container">
+                <div class="col-md-4 col-sm-4">
+                    <h1>CONTACT US</h1>
+                </div>
+                <div class="col-md-8 col-sm-8">
+                    <ul class="pull-right breadcrumb">
+                        <li><a href="<%= root_path %>">Home</a></li>
+                        <li class="active">Contact Us</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container min-hight">
+			<div class="row">
+				<div class="col-md-12 col-sm-12">
+					<div class="space20"></div>
+					 <address class="margin-bottom-40">
+                        <a href="mailto:info@maania.com">info@maania.com</a> <br />
+                        +1 201 448 2706
+                    </address>
+				</div>
 
+			</div>
+</div>
+</div>
     <!-- BEGIN COPYRIGHT -->
     <div class="copyright">
         <div class="container">
