--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,6 +16,7 @@
             </div>        
         </div>
         <!-- END TOP BAR -->
+       
 		<div class="container">
 			<div class="navbar-header">
 				<!-- BEGIN RESPONSIVE MENU TOGGLER -->
@@ -36,7 +37,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="dropdown active">
-                    <li><a href="/about_us" target="_blank">ABOUT</a></li>
+                    <li><a href="/about_us">About</a></li>
                     <li><a href="/recruitment_process_outsourcing">Recruitment Process Outsourcing</a></li>
 					<li><a href="/hire_offshore_recruiters">Hire Offshore Recruiters</a></li>
 					<li><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India	</a></li>
@@ -46,6 +47,8 @@
             <!-- BEGIN TOP NAVIGATION MENU -->
 		</div>
     </div>
+		 <div class="page-container">
+	
 
     <!-- BEGIN COPYRIGHT -->
     <div class="copyright">
