--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -23,7 +23,7 @@ body {
   direction: ltr;
   margin: 0 !important;
   padding: 0 !important;
-  font-family: 'Open Sans' !important;
+  font-family: 'Arial' !important;
   overflow-x: hidden;
 }
 
@@ -133,7 +133,7 @@ General More Link
 a.more {
   font-size: 13px;
   font-weight: 400 !important;
-  font-family: 'Open Sans' !important;
+  font-family: 'Arial' !important;
 }
 
 a.more i {
@@ -751,7 +751,7 @@ Slider
 	margin-bottom: 10px;
 }
 .slide_title_white {
-	font-family: 'Open Sans';
+	font-family: 'Arial';
 	font-weight: 300;
 	color:#fff;
 	text-align:center;
@@ -766,7 +766,7 @@ Slider
 .slide_subtitle_white {
 	border-top:1px solid #fff !important;
 	border-bottom:1px solid #fff !important;
-	font-family: 'Open Sans';
+	font-family: 'Arial';
 	font-weight: 300;
 	padding: 5px 10px;
 	color:#fff;
@@ -788,7 +788,7 @@ Slider
 }
 
 .slide_title {
-	font-family: 'Open Sans';
+	font-family: 'Arial';
 	font-weight: 300;
 	color:#3f5862;
 	text-transform: uppercase;
@@ -796,7 +796,7 @@ Slider
 }
 
 .slide_subtitle {
-	font-family: 'Open Sans';
+	font-family: 'Arial';
 	font-weight: 400;
 	background-color: #0088cc;
 	padding: 5px;
@@ -806,7 +806,7 @@ Slider
 }
 
 .slide_list_item {
-	font-family: 'Open Sans';
+	font-family: 'Arial';
 	font-weight: 400;
 	background-color: #0088cc;
 	padding: 5px;
@@ -827,7 +827,7 @@ Slider
 }
 
 .slide_btn {
-	font-family: 'Open Sans';
+	font-family: 'Arial';
 	font-weight: 300;
 	background:#6fc561;
 	padding:7px 15px;
@@ -2038,7 +2038,7 @@ Custom icon buttons
 }
 
 .icon-btn div {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Arial', sans-serif;
   margin-top: 5px;
   margin-bottom: 10px;  
   color: #000;
@@ -2048,7 +2048,7 @@ Custom icon buttons
 
 .icon-btn .badge {
   position: absolute;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Arial', sans-serif;
   font-size: 11px !important;
   font-weight: 300;
   top: -5px;
