--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,7 +48,32 @@
 		</div>
     </div>
 		 <div class="page-container">
-        <div class="container" style="min-height: 600px"></div>
+        <div class="container" style="min-height: 600px">
+        	
+        	<div class="container min-hight">
+			<!-- BEGIN ABOUT INFO -->   
+			<div class="row margin-bottom-30">
+				<!-- BEGIN INFO BLOCK -->               
+				<div class="col-md-5 space-mobile " >
+					<h1 class="number">WE HELP COMPANIES</h1>
+					<h1 class="number">REDUCE THEIR</h1>
+					<h1 class="number">RECRUITMENT COST</h1>
+					<!-- BEGIN LISTS -->
+					
+					<!-- END LISTS -->
+				</div>
+				<div class="col-md-7 space-mobile " >
+					<h1 class="number1">Hire a Full time offshore recruiter for only $999 per month ($6/hr)	</h1>
+					<h1 class="number1">Set up your offshore office in India</h1>
+					<!-- BEGIN LISTS -->
+					
+					<!-- END LISTS -->
+				</div>
+				<!-- END INFO BLOCK -->   
+
+			</div>
+		</div>
+        </div>
 	
 
     <!-- BEGIN COPYRIGHT -->
