--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,40 @@
  *= require login-soft
  *= require custom
  */
+
+.backstretch{
+	position: absolute !important;
+	top: 79px !important;
+}
+h1.head{
+	h1, .h1, h2, .h2, h3, .h3 {
+    margin-bottom: 550px !mportant;
+}
+
+}
+.number {
+    color: #fff;
+    display: inline-block;
+    font-size: 40px;
+    line-height: 50px;
+    margin-bottom: 10px;
+    margin-top: 0;
+    position: relative;
+    text-align: left;
+    top: 180px;
+    font-weight: lighter;
+}
+.number1 {
+    color: #fff;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 50px;
+    margin-bottom: 30px;
+    margin-top: 0;
+    position: relative;
+    text-align: right;
+    top: 200px;
+    font-weight: lighter;
+}
+}
