--- a/app/views/home/hor.html.erb
+++ b/app/views/home/hor.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><i class="fa fa-phone topbar-info-icon top-2"></i>Call us: <span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><i class="fa fa-envelope-o topbar-info-icon top-2"></i>Email: <span>info@maania.com</span></li>
+                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -66,23 +66,23 @@
         <div class="row">
 				<div class="col-md-12 col-sm-12">
 					<div class="space20"></div>
-					<p>We have experienced and highly skilled recruiters available for $999 per month. Our recruiters are dedicated and will exclusively perform full life cycle recruitment for your needs i.e. sourcing resumes, calling, interview arrangements, reference checks and closing offers. Our recruiters are experienced in hiring contract, contract to hire and full time employees on 1099, Corp-Corp, W2 and Per-diem based.</p>
+					<p>We have experienced and highly skilled <b>Recruiters available for $999 per month ($6 per hour)</b>. Our Recruiters are dedicated and will exclusively perform full life cycle recruitment for your needs i.e. sourcing resumes, calling, interview arrangements, reference checks and closing offers. Our Recruiters are experienced in hiring contract, contract to hire and full time employees on 1099, Corp-Corp, W2 and Per-diem based.</p>
 					<div class="space10"></div>
 					
-					<ul class="list-unstyled">
-						<li><i class="fa fa-check"></i> Analyzing and understanding requirements</li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Sourcing resumes  </li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Candidate screening & assessment </li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Negotiating salary </li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Interview co-ordination </li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Reference checks </li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Extending the offer </li>
+					<ul >
+						<li> Analyzing and understanding requirements</li>
+						<div class="space12"></div>
+						<li> Sourcing resumes  </li>
+						<div class="space12"></div>
+						<li> Candidate screening & assessment </li>
+						<div class="space12"></div>
+						<li> Negotiating salary </li>
+						<div class="space12"></div>
+						<li> Interview co-ordination </li>
+						<div class="space12"></div>
+						<li> Reference checks </li>
+						<div class="space12"></div>
+						<li> Extending the offer </li>
 					</ul>      
 				</div>
 
