--- a/app/views/home/rpo.html.erb
+++ b/app/views/home/rpo.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><i class="fa fa-phone topbar-info-icon top-2"></i>Call us: <span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><i class="fa fa-envelope-o topbar-info-icon top-2"></i>Email: <span>info@maania.com</span></li>
+                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -51,10 +51,10 @@
         <!-- BEGIN BREADCRUMBS -->   
         <div class="row breadcrumbs">
             <div class="container">
-                <div class="col-md-5 col-sm-5">
+                <div class="col-md-6 col-sm-6">
                     <h1>RECRUITMENT PROCESS OUTSOURCING</h1>
                 </div>
-                <div class="col-md-7 col-sm-7">
+                <div class="col-md-6 col-sm-6">
                     <ul class="pull-right breadcrumb">
                         <li><a href="<%= root_path %>">Home</a></li>
                         <li class="active">Recruitment Process Outsourcing</li>
@@ -68,14 +68,14 @@
 					<div class="space20"></div>
 					<p>We manage the entire hiring process from job profiling through the on boarding of the new hire, including staff, technology, strategies and reporting.</p>
 					<div class="space20"></div>
-					<ul class="list-unstyled">
-						<li><i class="fa fa-check"></i> Our highly skilled experienced Recruiters are experts in finding the suitable candidates for your requirements within the specified time frame and budget you deem as necessary.</li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Along with using regular job sites to find active candidates we also use innovative skills to attract best Passive Talent through Google Boolean search and Networking (LinkedIn). </li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Help businesses grow by matching the right talent to their specialized staffing and consulting needs, and build rewarding careers for the professionals we place. </li>
-						<div class="space20"></div>
-						<li><i class="fa fa-check"></i> Create a work environment where employees can thrive and innovate </li>
+					<ul>
+						<li> Our highly skilled experienced Recruiters are experts in finding the suitable candidates for your requirements within the specified time frame and budget you deem as necessary.</li>
+						<div class="space12"></div>
+						<li> Along with using regular job sites to find active candidates we also use innovative skills to attract best Passive Talent through Google Boolean search and Networking (LinkedIn). </li>
+						<div class="space12"></div>
+						<li> Help businesses grow by matching the right talent to their specialized staffing and consulting needs, and build rewarding careers for the professionals we place. </li>
+						<div class="space12"></div>
+						<li> Create a work environment where employees can thrive and innovate </li>
 						<div class="space20"></div>
 					</ul> 
 					<div class="space10"></div>
