--- a/app/views/home/sti.html.erb
+++ b/app/views/home/sti.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><i class="fa fa-phone topbar-info-icon top-2"></i>Call us: <span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><i class="fa fa-envelope-o topbar-info-icon top-2"></i>Email: <span>info@maania.com</span></li>
+                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -51,10 +51,10 @@
         <!-- BEGIN BREADCRUMBS -->   
         <div class="row breadcrumbs">
             <div class="container">
-                <div class="col-md-5 col-sm-5">
+                <div class="col-md-6 col-sm-6">
                     <h1>SET UP YOUR OFFSHORE OFFICE IN INDIA</h1>
                 </div>
-                <div class="col-md-7 col-sm-7">
+                <div class="col-md-6 col-sm-6">
                     <ul class="pull-right breadcrumb">
                         <li><a href="<%= root_path %>">Home</a></li>
                         <li class="active">Setup Your Offshore Office in India</li>
@@ -67,7 +67,7 @@
 			<div class="row">
 				<div class="col-md-12 col-sm-12">
 					<div class="space20"></div>
-					<p><b>Set up your offshore office in India and hire recruiters for only $799 per month ($5/hr). We can help you to do this by managing entire process.</b></p>
+					<p><b>Set up your offshore office in India and hire recruiters for only $799 per month ($5 per hour). We can help you to do this by managing entire process.</b></p>
 					<div class="space5"></div>
 					<!-- BEGIN FORM-->
 					<p>You can set up your offshore office in India. You can hire full time recruiters for $500-$1,000 per month. We can help you in every aspect from registering your company, infrastructure, hiring recruiters, managing employees and office administration.</p>
