--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><i class="fa fa-phone topbar-info-icon top-2"></i>Call us: <span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><i class="fa fa-envelope-o topbar-info-icon top-2"></i>Email: <span>info@maania.com</span></li>
+                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
                         </ul>
                     </div>
                 </div>
