--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><i class="fa fa-phone topbar-info-icon top-2"></i>Call us: <span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><i class="fa fa-envelope-o topbar-info-icon top-2"></i>Email: <span>info@maania.com</span></li>
+                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -67,8 +67,8 @@
 				<div class="col-md-12 col-sm-12">
 					<div class="space20"></div>
 					 <address class="margin-bottom-40">
-                        <a href="mailto:info@maania.com">info@maania.com</a> <br />
-                        +1 201 448 2706
+                        <a href="mailto:info@maania.com"><b>info@maania.com</b></a> <br />
+                        <b>+1 201 448 2706</b>
                     </address>
 				</div>
 
