--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><i class="fa fa-phone topbar-info-icon top-2"></i>Call us: <span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><i class="fa fa-envelope-o topbar-info-icon top-2"></i>Email: <span>info@maania.com</span></li>
+                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
 				<!-- BEGIN INFO BLOCK -->               
 				<div class="col-md-5 space-mobile " >
 					<h1 class="number">WE HELP COMPANIES</h1>
-					<h1 class="number">REDUCE THEIR</h1>
+					<h1 class="number">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;REDUCE THEIR</h1>
 					<h1 class="number">RECRUITMENT COST</h1>
 					<!-- BEGIN LISTS -->
 					
