--- a/app/views/home/rpo.html.erb
+++ b/app/views/home/rpo.html.erb
@@ -36,7 +36,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="dropdown active">
-                    <li><a href="/about_us">About</a></li>
+                    <li><a href="/about_us">About Us</a></li>
                     <li class="active"><a href="/recruitment_process_outsourcing">Recruitment Process Outsourcing</a></li>
 					<li><a href="/hire_offshore_recruiters">Hire Offshore Recruiters</a></li>
 					<li><a href="/set_up_your_offshore_office_in_india">Setup Your Offshore Office in India	</a></li>
