--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,13 +47,14 @@
             <!-- BEGIN TOP NAVIGATION MENU -->
 		</div>
     </div>
+    <div style= "min-height: 550px !important;">
         <div class="fullwidthbanner-container slider-main">
-            <div class="fullwidthabnner" style= "height: 597px !important;">
+            <div class="fullwidthabnner" style= "min-height: 550px !important;">
                 <ul id="revolutionul" style="display:none;">
                         <!-- THE NEW SLIDE -->
                         <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400">
                             <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
-                            <img src="/assets/img/bg/1.jpg" alt="">
+                            <img src="/assets/img/bg/1.jpg" alt="" height="447px">
                             
                             <div class="caption lft slide_title_white slide_item_left"
                                  data-x="30"
@@ -68,7 +69,7 @@
                         
                         <!-- THE THIRD SLIDE -->
                         <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400">
-                            <img src="/assets/img/bg/2.jpg" alt="">
+                            <img src="/assets/img/bg/2.jpg" alt="" height="447">
                             <div class="caption lft slide_title_white slide_item_left"
                                  data-x="30"
                                  data-y="90"
@@ -82,7 +83,7 @@
                         <!-- THE FORTH SLIDE -->
                         <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400">
                             <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
-                            <img src="/assets/img/bg/3.jpg" alt="">                        
+                            <img src="/assets/img/bg/3.jpg" alt="" height="447">                        
                             <div class="caption lft slide_title_white slide_item_left"
                                  data-x="30"
                                  data-y="90"
@@ -95,7 +96,7 @@
                 </ul>
             </div>
         </div>
-	
+	</div>
 
     <!-- BEGIN COPYRIGHT -->
     <div class="copyright">
