--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,9 +52,9 @@
             <div class="fullwidthabnner" style= "min-height: 550px !important;">
                 <ul id="revolutionul" style="display:none;">
                         <!-- THE NEW SLIDE -->
-                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400">
+                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="4700">
                             <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
-                            <img src="/assets/img/bg/1.jpg" alt="" height="447px">
+                            <img src="/assets/img/bg/1.jpg" alt="" style="max-height: 550px !important">
                             
                             <div class="caption lft slide_title_white slide_item_left"
                                  data-x="30"
@@ -68,8 +68,8 @@
                         <!-- THE FIRST SLIDE -->
                         
                         <!-- THE THIRD SLIDE -->
-                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400">
-                            <img src="/assets/img/bg/2.jpg" alt="" height="447">
+                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="4700">
+                            <img src="/assets/img/bg/2.jpg" alt="" style="max-height: 550px !important">
                             <div class="caption lft slide_title_white slide_item_left"
                                  data-x="30"
                                  data-y="90"
@@ -81,9 +81,9 @@
                         </li>               
                         
                         <!-- THE FORTH SLIDE -->
-                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400">
+                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="4700">
                             <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
-                            <img src="/assets/img/bg/3.jpg" alt="" height="447">                        
+                            <img src="/assets/img/bg/3.jpg" alt="" style="max-height: 550px !important">                        
                             <div class="caption lft slide_title_white slide_item_left"
                                  data-x="30"
                                  data-y="90"
