--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span><b>+1 201 448 2706</b></span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
+                            <li><b>Email: </b><span><b><a href="mailto:info@maania.com">info@maania.com</a></b></span></li>
                         </ul>
                     </div>
                 </div>
@@ -66,10 +66,10 @@
 			<div class="row">
 				<div class="col-md-12 col-sm-12">
 					<div class="space20"></div>
-					<p>Maania Consultancy is a professional Recruitment Process Outsourcing (RPO) Company specialized in Talent Acquisition in the areas of IT, Engineering, Healthcare and Financial services.</p>
+					<p>Maania Consultancy is a professional <b>Recruitment Process Outsourcing (RPO)</b> Company specialized in <b>Talent Acquisition</b> in the areas of IT, Engineering, Healthcare and Financial services.</p>
 					<div class="space5"></div>
 					<!-- BEGIN FORM-->
-					<p>Our aim is to cut organizations recruiting costs. We can deliver offshore recruiters and we will help you to setup your offshore office in India and manage entire process. We help companies cast a larger net to locate more of the talent they need by increasing their recruiting capacity.</p>
+					<p>Our aim is to cut organizations Recruiting Costs. We can deliver Offshore Recruiters and we will help you to setup your Offshore Office in India and manage entire process. We help companies cast a larger net to locate more of the talent they need by increasing their recruiting capacity.</p>
 					<!-- END FORM-->                  
 					<div class="space"></div>
 					<p>We inspire individuals and organizations to work more effectively, efficiently, and foster greater choice in the domain of labor for the benefit of all concerned. Helping people to better perform enhances better quality of life; this is the staple as our company’s common purpose; the way in which we contribute to society.</p>
