--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span><b>+1 201 448 2706</b></span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
+                            <li><b>Email: </b><span><b><a href="mailto:info@maania.com">info@maania.com</a></b></span></li>
                         </ul>
                     </div>
                 </div>
