--- a/app/views/home/sti.html.erb
+++ b/app/views/home/sti.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span><b>+1 201 448 2706</b></span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
+                            <li><b>Email: </b><span><b><a href="mailto:info@maania.com">info@maania.com</a></b></span></li>
                         </ul>
                     </div>
                 </div>
@@ -67,10 +67,10 @@
 			<div class="row">
 				<div class="col-md-12 col-sm-12">
 					<div class="space20"></div>
-					<p><b>Set up your offshore office in India and hire recruiters for only $799 per month ($5 per hour). We can help you to do this by managing entire process.</b></p>
+					<p><b>Set up your Offshore Office in India and hire Recruiters for only $799 per month ($5 per hour). We can help you to do this by managing entire process.</b></p>
 					<div class="space5"></div>
 					<!-- BEGIN FORM-->
-					<p>You can set up your offshore office in India. You can hire full time recruiters for $500-$1,000 per month. We can help you in every aspect from registering your company, infrastructure, hiring recruiters, managing employees and office administration.</p>
+					<p>You can set up your Offshore Office in India. You can hire Full Time Recruiters for $500-$1,000 per month. We can help you in every aspect from registering your company, infrastructure, hiring Recruiters, managing employees and office administration.</p>
 					<!-- END FORM-->                  
 					<div class="space"></div>
 					<p>By providing reduced labor costs, we allow your company to get more from its Recruiting Budget.  For about the same amount of money as you might pay for 2-3 job postings per month, we will provide you with a Full Time, Full Cycle Recruiter, providing a comprehensive candidates search of numerous paid resources, then screening, qualifying, and presenting the best qualified candidates for your openings, and managing the entire interview process on your behalf.</p>
