--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-7 pull-right">
                         <ul class="list-unstyle inline pull-right">
-                            <li><b>Call Us: </b><span>+1 201 448 2706</span></li>
+                            <li><b>Call Us: </b><span><b>+1 201 448 2706</b></span></li>
                             <li class="sep"><span>|</span></li>
-                            <li><b>Email: </b><span><a href="mailto:info@maania.com">info@maania.com</a></span></li>
+                            <li><b>Email: </b><span><b><a href="mailto:info@maania.com">info@maania.com</a></b></span></li>
                         </ul>
                     </div>
                 </div>
@@ -52,16 +52,13 @@
             <div class="fullwidthabnner" style= "min-height: 550px !important;">
                 <ul id="revolutionul" style="display:none;">
                         <!-- THE NEW SLIDE -->
-                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="4700">
+                        <li data-transition="fade" data-slotamount="8" >
                             <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
                             <img src="/assets/img/bg/1.jpg" alt="" style="max-height: 550px !important">
                             
-                            <div class="caption lft slide_title_white slide_item_left"
+                            <div class="caption lft slide_title_white "
                                  data-x="30"
-                                 data-y="90"
-                                 data-speed="400"
-                                 data-start="1500"
-                                 data-easing="easeOutBack">
+                                 data-y="90">
                                  WE HELP COMPANIES<br><span class="slide_title_white_bold">REDUCE THEIR</span><br>RECRUITMENT COST
                             </div>
                         </li>            
