--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -769,10 +769,10 @@ Slider
 .slide_title_white {
 	font-family: 'Arial';
 	font-weight: 300;
-	color:#fff;
+	color:#000;
 	text-align:center;
 	text-transform: uppercase;
-	font-size:47px;
+	font-size:20px;
 }
 
 .slide_title_white_bold {
