--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,12 +52,12 @@
             <div class="fullwidthabnner" style= "min-height: 550px !important;">
                 <ul id="revolutionul" style="display:none;">
                         <!-- THE NEW SLIDE -->
-                        <li data-transition="fade" data-slotamount="8" >
+                        <li  data-transition="fade" data-delay="4700">
                             <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
                             <img src="/assets/img/bg/1.jpg" alt="" style="max-height: 550px !important">
                             
                             <div class="caption lft slide_title_white "
-                                 data-x="30"
+                                 data-x="10"
                                  data-y="90">
                                  WE HELP COMPANIES<br><span class="slide_title_white_bold">REDUCE THEIR</span><br>RECRUITMENT COST
                             </div>
@@ -65,29 +65,23 @@
                         <!-- THE FIRST SLIDE -->
                         
                         <!-- THE THIRD SLIDE -->
-                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="4700">
+                        <li data-transition="fade" data-delay="4700">
                             <img src="/assets/img/bg/2.jpg" alt="" style="max-height: 550px !important">
                             <div class="caption lft slide_title_white slide_item_left"
-                                 data-x="30"
-                                 data-y="90"
-                                 data-speed="400"
-                                 data-start="1500"
-                                 data-easing="easeOutBack">
+                                 data-x="10"
+                                 data-y="90">
                                  HIRE OFFSHORE RECRUITERS<br><span class="slide_title_white_bold">FOR ONLY</span><br>$999 PER MONTH / $6 PER HOUR
                             </div>
                         </li>               
                         
                         <!-- THE FORTH SLIDE -->
-                        <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="4700">
+                        <li data-transition="fade" data-delay="4700">
                             <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
-                            <img src="/assets/img/bg/3.jpg" alt="" style="max-height: 550px !important">                        
+                            <img src="/assets/img/bg/3.jpg" alt="" style="max-height: 550px !important">
                             <div class="caption lft slide_title_white slide_item_left"
-                                 data-x="30"
-                                 data-y="90"
-                                 data-speed="400"
-                                 data-start="1500"
-                                 data-easing="easeOutBack">
-                                 SET UP YOUR OFFSHORE OFFICE IN INDIA<br><span class="slide_title_white_bold">HIRE RECRUITERS FOR ONLY</span><br>$799 PER MONTH / $5 PER HOUR
+                                 data-x="10"
+                                 data-y="90">
+                                 SET UP YOUR OFFSHORE<br><span class="slide_title_white_bold">OFFICE IN INDIA </span><br>HIRE RECRUITERS <br>FOR ONLY $5 PER HOUR
                             </div>                        
                         </li>
                 </ul>
