--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,6 +60,19 @@
                                  data-x="10"
                                  data-y="90">
                                  WE HELP COMPANIES<br><span class="slide_title_white_bold">REDUCE THEIR</span><br>RECRUITMENT COST
+                            
+                            
+                            <div class="tp-bullets simplebullets round" style="bottom: 20px; left: 16.5%; margin-left: -36px;">
+                            	<div class="bullet first"></div>
+                            	<div class="bullet selected"></div>
+                            	<div class="bullet last"></div>
+                            	<div class="tpclear"></div>
+                            </div>
+                            
+                            
+                            
+                            
+                            
                             </div>
                         </li>            
                         <!-- THE FIRST SLIDE -->
