--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -758,16 +758,16 @@ Slider
 	margin-bottom: 10px;
 }
 .slide_title_white {
-	font-family: 'Arial';
-	font-weight: 300;
+	font-weight: 600;
 	color:#fff;
 	text-align:center;
 	text-transform: uppercase;
 	font-size:20px;
+	font-family: "Source Sans Pro",sans-serif;
 }
 
 .slide_title_white_bold {
-	font-weight: 400;
+	font-weight: 600;
 }
 
 .slide_subtitle_white {
