--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -762,7 +762,7 @@ Slider
 	color:#fff;
 	text-align:center;
 	text-transform: uppercase;
-	font-size:20px;
+	font-size:40px !important;
 	font-family: "Source Sans Pro",sans-serif;
 }
 
